--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Will you be my Valentine Bebi? 💕</h1>
 
         <div class="gif-container">
-            <img id="cat-gif" src="https://media.tenor.com/EBV7OT7ACfwAAAAj/u-u-qua-qua-u-quaa.gif" alt="cute character">
+            <img id="cat-gif" src="https://tenor.com/view/upset-pudgypenguins-tap-waiting-impatient-gif-10166838054950077962" alt="cute character">
         </div>
 
         <div class="buttons">
