--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Will you be my Valentine Bebi? 💕</h1>
 
         <div class="gif-container">
-            <img id="cat-gif" src="<div class="tenor-gif-embed" data-postid="10166838054950077962" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/upset-pudgypenguins-tap-waiting-impatient-gif-10166838054950077962">Upset Pudgypenguins Sticker</a>from <a href="https://tenor.com/search/upset-stickers">Upset Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>" alt="cute character">
+            <img id="cat-gif" src="https://media.tenor.com/jRfdWEI5BgoAAAAi/upset-pudgypenguins.gif" alt="cute character">
         </div>
 
         <div class="buttons">
